--- a/BigDataLab2/pom.xml
+++ b/BigDataLab2/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>BigDateLab</groupId>
-    <artifactId>Sort</artifactId>
+    <artifactId>TFIDF</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -24,8 +24,8 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <!--main（）所在的类，注意修改-->
-                            <mainClass>Sort</mainClass>
+                            <!--main() 所在的类，注意修改-->
+                            <mainClass>TFIDF</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
