--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -55,5 +55,12 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/ncsa.hdf/jhdf5 -->
+        <dependency>
+            <groupId>org.hdfgroup</groupId>
+            <artifactId>hdf-java</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
     </dependencies>
 </project>
