--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>BigDateLab</groupId>
-    <artifactId>K-Means</artifactId>
+    <artifactId>Project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -61,6 +61,7 @@
             <artifactId>hdf-java</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/ncsa.hdf/lib-hdf -->
 
     </dependencies>
 </project>
